src/test/deca/codegen/extension/valid/oracle/TAB_huge_matrices.deca
{
    int[][] mat = int[400][20];
    float[][] mat = int[500][500];
}