src/test/deca/codegen/extension/invalid/oracle/TAB_access_invalid_index4.deca
{
    int[][] a = new int[5][5];
    a[4][5];
}